--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@cycle/history": "^6.8.0",
     "@cycle/isolate": "^3.2.0",
     "@cycle/run": "^3.4.0",
+    "cycle-onionify": "^4.0.0",
     "xstream": "^11.0.0"
   },
   "devDependencies": {
