--- a/package.json
+++ b/package.json
@@ -5,33 +5,35 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "NODE_PATH=. webpack --config webpack.config.ts",
-    "dev": "NODE_PATH=. webpack-dev-server --hot --inline"
+    "build": "NODE_PATH=. webpack --mode production --config webpack.config.ts",
+    "dev": "NODE_PATH=. webpack-dev-server --mode development --hot --inline"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@cycle/dom": "^19.3.0",
-    "@cycle/isolate": "^3.2.0",
-    "@cycle/run": "^3.4.0",
-    "cycle-onionify": "^4.0.0",
-    "xstream": "^11.0.0"
+    "@cycle/dom": "^20.4.0",
+    "@cycle/isolate": "^3.3.0",
+    "@cycle/run": "^4.1.0",
+    "cycle-onionify": "^5.0.0",
+    "xstream": "^11.2.0"
   },
   "devDependencies": {
-    "@types/node": "^8.0.47",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.30.1",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "ts-loader": "^3.1.1",
-    "ts-node": "^3.3.0",
-    "tslint": "^5.8.0",
-    "tslint-loader": "^3.5.3",
-    "typescript": "2.4.1",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "@types/node": "^10.1.1",
+    "awesome-typescript-loader": "^5.0.0",
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.9.0",
+    "prettier": "^1.10.2",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "ts-node": "^6.0.3",
+    "tslint": "^5.10.0",
+    "tslint-loader": "^3.6.0",
+    "typescript": "2.7.2",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.4"
   }
 }
